fix(form): fix input/select spacing

--- a/src/components/formGroup/styles/vars/CdrFormGroup.vars.scss
+++ b/src/components/formGroup/styles/vars/CdrFormGroup.vars.scss
@@ -9,8 +9,6 @@
   padding-inline-end: 0;
   padding-block-end: 0;
 
-  margin-bottom: $cdr-space-one-x;
-
   legend {
     padding-inline-start: 0;
     margin-bottom: $cdr-space-half-x;
