--- a/src/components/input/styles/CdrInput.scss
+++ b/src/components/input/styles/CdrInput.scss
@@ -189,9 +189,4 @@
 
 .cdr-input-outer-wrap {
   display: flex;
-  margin-top: $cdr-space-half-x;
-}
-
-.cdr-input-container {
-  margin-bottom: $cdr-space-two-x;
 }
