--- a/src/components/select/styles/CdrSelect.scss
+++ b/src/components/select/styles/CdrSelect.scss
@@ -152,10 +152,4 @@
 .cdr-select-outer-wrap {
   position: relative;
   display: flex;
-  margin-top: $cdr-space-half-x;
-  margin-bottom: $cdr-space-quarter-x;
-}
-
-.cdr-select-container {
-  margin-bottom: $cdr-space-two-x;
 }
